parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program statment
Rule 2     program -> <empty>
Rule 3     bloco -> INDENT program DEDENT
Rule 4     statment -> conditional
Rule 5     statment -> loops
Rule 6     statment -> stop
Rule 7     statment -> conti
Rule 8     statment -> argumentlist
Rule 9     statment -> bloco
Rule 10    statment -> expression
Rule 11    statment -> declaration
Rule 12    statment -> read_gets
Rule 13    statment -> create_puts
Rule 14    stop -> break
Rule 15    conti -> continue
Rule 16    declaration -> simple_declaration
Rule 17    declaration -> complex_declaration
Rule 18    declaration -> declaration_pointer
Rule 19    declaration -> acess_pointer
Rule 20    simple_declaration -> matrix_declaration
Rule 21    simple_declaration -> expression_declaration
Rule 22    matrix_declaration -> ID ASSIGNMENT matrix
Rule 23    expression_declaration -> ID ASSIGNMENT expression
Rule 24    complex_declaration -> int_declaration
Rule 25    complex_declaration -> float_declaration
Rule 26    complex_declaration -> boolean_declaration
Rule 27    int_declaration -> int ID ASSIGNMENT expression
Rule 28    float_declaration -> float ID ASSIGNMENT expression
Rule 29    boolean_declaration -> boolean ID ASSIGNMENT expression_declaration
Rule 30    conditional -> if expression begin bloco end SEMICOLON
Rule 31    conditional -> if expression begin bloco else bloco end SEMICOLON
Rule 32    conditional -> if expression begin bloco elsif expression bloco else bloco end SEMICOLON
Rule 33    loops -> fors
Rule 34    loops -> whiles
Rule 35    loops -> repeats
Rule 36    loops -> unlesss
Rule 37    fors -> for expression_variable LBRACKET expression_variable RBRACKET in expression LBRACKET do RBRACKET begin bloco end
Rule 38    fors -> for expression in CONST_INTERGER POINTPOINT CONST_INTERGER bloco end
Rule 39    whiles -> while expression do bloco end
Rule 40    whiles -> do bloco break if expression end
Rule 41    repeats -> repeat CONST_INTERGER DPOINT bloco end SEMICOLON
Rule 42    unlesss -> unless expression then bloco RBRACKET else bloco LBRACKET end
Rule 43    expression -> expression_binop
Rule 44    expression -> expression_unitary
Rule 45    expression -> expression_const_real
Rule 46    expression -> expression_const_interger
Rule 47    expression -> expression_const_string
Rule 48    expression -> expression_true
Rule 49    expression -> expression_false
Rule 50    expression -> expression_variable
Rule 51    expression -> expression_land
Rule 52    expression_unitary -> unitary_not
Rule 53    expression_unitary -> unitary_asterisk
Rule 54    expression_unitary -> unitary_plus
Rule 55    expression_unitary -> unitary_minus
Rule 56    expression_binop -> expression_and
Rule 57    expression_binop -> expression_or
Rule 58    expression_binop -> expression_gt
Rule 59    expression_binop -> expression_ge
Rule 60    expression_binop -> expression_lt
Rule 61    expression_binop -> expression_le
Rule 62    expression_binop -> expression_minus
Rule 63    expression_binop -> expression_plus
Rule 64    expression_binop -> expression_mult
Rule 65    expression_binop -> expression_divide
Rule 66    expression_binop -> expression_module
Rule 67    expression_binop -> expression_equals
Rule 68    expression_binop -> expression_different
Rule 69    unitary_minus -> MINUS expression
Rule 70    unitary_plus -> PLUS expression
Rule 71    unitary_asterisk -> ASTERISK expression
Rule 72    unitary_not -> NOT expression
Rule 73    expression_and -> expression AND expression
Rule 74    expression_or -> expression OR expression
Rule 75    expression_gt -> expression GT expression
Rule 76    expression_ge -> expression GE expression
Rule 77    expression_lt -> expression LT expression
Rule 78    expression_le -> expression LE expression
Rule 79    expression_land -> LAND expression
Rule 80    expression_const_real -> CONST_REAL
Rule 81    expression_const_interger -> CONST_INTERGER
Rule 82    expression_const_string -> CONST_STRING
Rule 83    expression_true -> True
Rule 84    expression_false -> False
Rule 85    expression_plus -> expression PLUS expression
Rule 86    expression_equals -> expression EQUALS expression
Rule 87    expression_different -> expression DIFFERENT expression
Rule 88    expression_minus -> expression MINUS expression
Rule 89    expression_mult -> expression ASTERISK expression
Rule 90    expression_divide -> expression DIVIDE expression
Rule 91    expression_module -> expression MODULE expression
Rule 92    argumentlist -> ID LPAREN COMMA ID RPAREN ASTERISK LBRACKET COMMA ASTERISK LBRACKET ID RBRACKET RBRACKET LBRACKET COMMA LAND ID RBRACKET
Rule 93    argumentlist -> ASTERISK ID LBRACKET COMMA LAND ID RBRACKET
Rule 94    argumentlist -> LBRACKET LAND ID RBRACKET
Rule 95    expression_variable -> ID
Rule 96    expression_variable -> DSING ID
Rule 97    read_gets -> ID ASSIGNMENT gets
Rule 98    create_puts -> puts_const_string
Rule 99    create_puts -> puts_expression
Rule 100   create_puts -> puts_quotation
Rule 101   create_puts -> puts_dquotation
Rule 102   puts_const_string -> puts CONST_STRING
Rule 103   puts_expression -> puts expression_variable
Rule 104   puts_quotation -> puts_string
Rule 105   puts_quotation -> puts_expressionq
Rule 106   puts_string -> puts QUOTATION CONST_STRING QUOTATION
Rule 107   puts_expressionq -> puts QUOTATION expression_variable QUOTATION
Rule 108   puts_dquotation -> puts_string_dq
Rule 109   puts_dquotation -> puts_expression_dq
Rule 110   puts_string_dq -> puts DQUOTATION CONST_STRING DQUOTATION
Rule 111   puts_expression_dq -> puts DQUOTATION expression_variable DQUOTATION
Rule 112   pointer -> ASTERISK pointer
Rule 113   pointer -> ASTERISK
Rule 114   pointer_acess -> and pointer_acess
Rule 115   pointer_acess -> and
Rule 116   and -> token_and
Rule 117   and -> token_land
Rule 118   token_and -> AND
Rule 119   token_land -> LAND
Rule 120   declaration_pointer -> pointer ID
Rule 121   acess_pointer -> pointer_acess ID
Rule 122   matrix -> matrix_arg
Rule 123   matrix -> matrix_rec
Rule 124   matrix -> LBRACKET argument RBRACKET matrix
Rule 125   matrix -> LBRACKET argument RBRACKET COMMA matrix
Rule 126   matrix_arg -> LBRACKET argument RBRACKET
Rule 127   matrix_rec -> LBRACKET matrix RBRACKET
Rule 128   argument -> expression
Rule 129   argument -> argument COMMA expression
Rule 130   argument -> argument POINT expression
Rule 131   argument -> <empty>

Terminals, with rules where they appear

AND                  : 73 118
ASSIGNMENT           : 22 23 27 28 29 97
ASTERISK             : 71 89 92 92 93 112 113
COMMA                : 92 92 92 93 125 129
CONST_INTERGER       : 38 38 41 81
CONST_REAL           : 80
CONST_STRING         : 82 102 106 110
DEDENT               : 3
DIFFERENT            : 87
DIVIDE               : 90
DPOINT               : 41
DQUOTATION           : 110 110 111 111
DSING                : 96
EQUALS               : 86
False                : 84
GE                   : 76
GT                   : 75
ID                   : 22 23 27 28 29 92 92 92 92 93 93 94 95 96 97 120 121
INDENT               : 3
LAND                 : 79 92 93 94 119
LBRACKET             : 37 37 42 92 92 92 93 94 124 125 126 127
LE                   : 78
LPAREN               : 92
LT                   : 77
MINUS                : 69 88
MODULE               : 91
NOT                  : 72
OR                   : 74
PLUS                 : 70 85
POINT                : 130
POINTPOINT           : 38
QUOTATION            : 106 106 107 107
RBRACKET             : 37 37 42 92 92 92 93 94 124 125 126 127
RPAREN               : 92
SEMICOLON            : 30 31 32 41
True                 : 83
begin                : 30 31 32 37
boolean              : 29
break                : 14 40
continue             : 15
do                   : 37 39 40
else                 : 31 32 42
elsif                : 32
end                  : 30 31 32 37 38 39 40 41 42
error                : 
float                : 28
for                  : 37 38
gets                 : 97
if                   : 30 31 32 40
in                   : 37 38
int                  : 27
puts                 : 102 103 106 107 110 111
repeat               : 41
then                 : 42
unless               : 42
while                : 39

Nonterminals, with rules where they appear

acess_pointer        : 19
and                  : 114 115
argument             : 124 125 126 129 130
argumentlist         : 8
bloco                : 9 30 31 31 32 32 32 37 38 39 40 41 42 42
boolean_declaration  : 26
complex_declaration  : 17
conditional          : 4
conti                : 7
create_puts          : 13
declaration          : 11
declaration_pointer  : 18
expression           : 10 23 27 28 30 31 32 32 37 38 39 40 42 69 70 71 72 73 73 74 74 75 75 76 76 77 77 78 78 79 85 85 86 86 87 87 88 88 89 89 90 90 91 91 128 129 130
expression_and       : 56
expression_binop     : 43
expression_const_interger : 46
expression_const_real : 45
expression_const_string : 47
expression_declaration : 21 29
expression_different : 68
expression_divide    : 65
expression_equals    : 67
expression_false     : 49
expression_ge        : 59
expression_gt        : 58
expression_land      : 51
expression_le        : 61
expression_lt        : 60
expression_minus     : 62
expression_module    : 66
expression_mult      : 64
expression_or        : 57
expression_plus      : 63
expression_true      : 48
expression_unitary   : 44
expression_variable  : 37 37 50 103 107 111
float_declaration    : 25
fors                 : 33
int_declaration      : 24
loops                : 5
matrix               : 22 124 125 127
matrix_arg           : 122
matrix_declaration   : 20
matrix_rec           : 123
pointer              : 112 120
pointer_acess        : 114 121
program              : 1 3 0
puts_const_string    : 98
puts_dquotation      : 101
puts_expression      : 99
puts_expression_dq   : 109
puts_expressionq     : 105
puts_quotation       : 100
puts_string          : 104
puts_string_dq       : 108
read_gets            : 12
repeats              : 35
simple_declaration   : 16
statment             : 1
stop                 : 6
token_and            : 116
token_land           : 117
unitary_asterisk     : 53
unitary_minus        : 55
unitary_not          : 52
unitary_plus         : 54
unlesss              : 36
whiles               : 34

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statment
    (2) program -> .

    if              reduce using rule 2 (program -> .)
    break           reduce using rule 2 (program -> .)
    continue        reduce using rule 2 (program -> .)
    ID              reduce using rule 2 (program -> .)
    ASTERISK        reduce using rule 2 (program -> .)
    LBRACKET        reduce using rule 2 (program -> .)
    INDENT          reduce using rule 2 (program -> .)
    for             reduce using rule 2 (program -> .)
    while           reduce using rule 2 (program -> .)
    do              reduce using rule 2 (program -> .)
    repeat          reduce using rule 2 (program -> .)
    unless          reduce using rule 2 (program -> .)
    CONST_REAL      reduce using rule 2 (program -> .)
    CONST_INTERGER  reduce using rule 2 (program -> .)
    CONST_STRING    reduce using rule 2 (program -> .)
    True            reduce using rule 2 (program -> .)
    False           reduce using rule 2 (program -> .)
    DSING           reduce using rule 2 (program -> .)
    LAND            reduce using rule 2 (program -> .)
    puts            reduce using rule 2 (program -> .)
    NOT             reduce using rule 2 (program -> .)
    PLUS            reduce using rule 2 (program -> .)
    MINUS           reduce using rule 2 (program -> .)
    int             reduce using rule 2 (program -> .)
    float           reduce using rule 2 (program -> .)
    boolean         reduce using rule 2 (program -> .)
    AND             reduce using rule 2 (program -> .)
    $end            reduce using rule 2 (program -> .)

    program                        shift and go to state 1

state 1

    (0) S' -> program .
    (1) program -> program . statment
    (4) statment -> . conditional
    (5) statment -> . loops
    (6) statment -> . stop
    (7) statment -> . conti
    (8) statment -> . argumentlist
    (9) statment -> . bloco
    (10) statment -> . expression
    (11) statment -> . declaration
    (12) statment -> . read_gets
    (13) statment -> . create_puts
    (30) conditional -> . if expression begin bloco end SEMICOLON
    (31) conditional -> . if expression begin bloco else bloco end SEMICOLON
    (32) conditional -> . if expression begin bloco elsif expression bloco else bloco end SEMICOLON
    (33) loops -> . fors
    (34) loops -> . whiles
    (35) loops -> . repeats
    (36) loops -> . unlesss
    (14) stop -> . break
    (15) conti -> . continue
    (92) argumentlist -> . ID LPAREN COMMA ID RPAREN ASTERISK LBRACKET COMMA ASTERISK LBRACKET ID RBRACKET RBRACKET LBRACKET COMMA LAND ID RBRACKET
    (93) argumentlist -> . ASTERISK ID LBRACKET COMMA LAND ID RBRACKET
    (94) argumentlist -> . LBRACKET LAND ID RBRACKET
    (3) bloco -> . INDENT program DEDENT
    (43) expression -> . expression_binop
    (44) expression -> . expression_unitary
    (45) expression -> . expression_const_real
    (46) expression -> . expression_const_interger
    (47) expression -> . expression_const_string
    (48) expression -> . expression_true
    (49) expression -> . expression_false
    (50) expression -> . expression_variable
    (51) expression -> . expression_land
    (16) declaration -> . simple_declaration
    (17) declaration -> . complex_declaration
    (18) declaration -> . declaration_pointer
    (19) declaration -> . acess_pointer
    (97) read_gets -> . ID ASSIGNMENT gets
    (98) create_puts -> . puts_const_string
    (99) create_puts -> . puts_expression
    (100) create_puts -> . puts_quotation
    (101) create_puts -> . puts_dquotation
    (37) fors -> . for expression_variable LBRACKET expression_variable RBRACKET in expression LBRACKET do RBRACKET begin bloco end
    (38) fors -> . for expression in CONST_INTERGER POINTPOINT CONST_INTERGER bloco end
    (39) whiles -> . while expression do bloco end
    (40) whiles -> . do bloco break if expression end
    (41) repeats -> . repeat CONST_INTERGER DPOINT bloco end SEMICOLON
    (42) unlesss -> . unless expression then bloco RBRACKET else bloco LBRACKET end
    (56) expression_binop -> . expression_and
    (57) expression_binop -> . expression_or
    (58) expression_binop -> . expression_gt
    (59) expression_binop -> . expression_ge
    (60) expression_binop -> . expression_lt
    (61) expression_binop -> . expression_le
    (62) expression_binop -> . expression_minus
    (63) expression_binop -> . expression_plus
    (64) expression_binop -> . expression_mult
    (65) expression_binop -> . expression_divide
    (66) expression_binop -> . expression_module
    (67) expression_binop -> . expression_equals
    (68) expression_binop -> . expression_different
    (52) expression_unitary -> . unitary_not
    (53) expression_unitary -> . unitary_asterisk
    (54) expression_unitary -> . unitary_plus
    (55) expression_unitary -> . unitary_minus
    (80) expression_const_real -> . CONST_REAL
    (81) expression_const_interger -> . CONST_INTERGER
    (82) expression_const_string -> . CONST_STRING
    (83) expression_true -> . True
    (84) expression_false -> . False
    (95) expression_variable -> . ID
    (96) expression_variable -> . DSING ID
    (79) expression_land -> . LAND expression
    (20) simple_declaration -> . matrix_declaration
    (21) simple_declaration -> . expression_declaration
    (24) complex_declaration -> . int_declaration
    (25) complex_declaration -> . float_declaration
    (26) complex_declaration -> . boolean_declaration
    (120) declaration_pointer -> . pointer ID
    (121) acess_pointer -> . pointer_acess ID
    (102) puts_const_string -> . puts CONST_STRING
    (103) puts_expression -> . puts expression_variable
    (104) puts_quotation -> . puts_string
    (105) puts_quotation -> . puts_expressionq
    (108) puts_dquotation -> . puts_string_dq
    (109) puts_dquotation -> . puts_expression_dq
    (73) expression_and -> . expression AND expression
    (74) expression_or -> . expression OR expression
    (75) expression_gt -> . expression GT expression
    (76) expression_ge -> . expression GE expression
    (77) expression_lt -> . expression LT expression
    (78) expression_le -> . expression LE expression
    (88) expression_minus -> . expression MINUS expression
    (85) expression_plus -> . expression PLUS expression
    (89) expression_mult -> . expression ASTERISK expression
    (90) expression_divide -> . expression DIVIDE expression
    (91) expression_module -> . expression MODULE expression
    (86) expression_equals -> . expression EQUALS expression
    (87) expression_different -> . expression DIFFERENT expression
    (72) unitary_not -> . NOT expression
    (71) unitary_asterisk -> . ASTERISK expression
    (70) unitary_plus -> . PLUS expression
    (69) unitary_minus -> . MINUS expression
    (22) matrix_declaration -> . ID ASSIGNMENT matrix
    (23) expression_declaration -> . ID ASSIGNMENT expression
    (27) int_declaration -> . int ID ASSIGNMENT expression
    (28) float_declaration -> . float ID ASSIGNMENT expression
    (29) boolean_declaration -> . boolean ID ASSIGNMENT expression_declaration
    (112) pointer -> . ASTERISK pointer
    (113) pointer -> . ASTERISK
    (114) pointer_acess -> . and pointer_acess
    (115) pointer_acess -> . and
    (106) puts_string -> . puts QUOTATION CONST_STRING QUOTATION
    (107) puts_expressionq -> . puts QUOTATION expression_variable QUOTATION
    (110) puts_string_dq -> . puts DQUOTATION CONST_STRING DQUOTATION
    (111) puts_expression_dq -> . puts DQUOTATION expression_variable DQUOTATION
    (116) and -> . token_and
    (117) and -> . token_land
    (118) token_and -> . AND
    (119) token_land -> . LAND

    if              shift and go to state 13
    break           shift and go to state 18
    continue        shift and go to state 19
    ID              shift and go to state 20
    ASTERISK        shift and go to state 21
    LBRACKET        shift and go to state 22
    INDENT          shift and go to state 24
    for             shift and go to state 42
    while           shift and go to state 45
    do              shift and go to state 43
    repeat          shift and go to state 46
    unless          shift and go to state 47
    CONST_REAL      shift and go to state 65
    CONST_INTERGER  shift and go to state 44
    CONST_STRING    shift and go to state 66
    True            shift and go to state 67
    False           shift and go to state 68
    DSING           shift and go to state 69
    LAND            shift and go to state 23
    puts            shift and go to state 77
    NOT             shift and go to state 85
    PLUS            shift and go to state 84
    MINUS           shift and go to state 83
    int             shift and go to state 86
    float           shift and go to state 87
    boolean         shift and go to state 88
    AND             shift and go to state 82

    statment                       shift and go to state 2
    conditional                    shift and go to state 3
    loops                          shift and go to state 4
    stop                           shift and go to state 5
    conti                          shift and go to state 6
    argumentlist                   shift and go to state 7
    bloco                          shift and go to state 8
    expression                     shift and go to state 9
    declaration                    shift and go to state 10
    read_gets                      shift and go to state 11
    create_puts                    shift and go to state 12
    fors                           shift and go to state 14
    whiles                         shift and go to state 15
    repeats                        shift and go to state 16
    unlesss                        shift and go to state 17
    expression_binop               shift and go to state 25
    expression_unitary             shift and go to state 26
    expression_const_real          shift and go to state 27
    expression_const_interger      shift and go to state 28
    expression_const_string        shift and go to state 29
    expression_true                shift and go to state 30
    expression_false               shift and go to state 31
    expression_variable            shift and go to state 32
    expression_land                shift and go to state 33
    simple_declaration             shift and go to state 34
    complex_declaration            shift and go to state 35
    declaration_pointer            shift and go to state 36
    acess_pointer                  shift and go to state 37
    puts_const_string              shift and go to state 38
    puts_expression                shift and go to state 39
    puts_quotation                 shift and go to state 40
    puts_dquotation                shift and go to state 41
    expression_and                 shift and go to state 48
    expression_or                  shift and go to state 49
    expression_gt                  shift and go to state 50
    expression_ge                  shift and go to state 51
    expression_lt                  shift and go to state 52
    expression_le                  shift and go to state 53
    expression_minus               shift and go to state 54
    expression_plus                shift and go to state 55
    expression_mult                shift and go to state 56
    expression_divide              shift and go to state 57
    expression_module              shift and go to state 58
    expression_equals              shift and go to state 59
    expression_different           shift and go to state 60
    unitary_not                    shift and go to state 61
    unitary_asterisk               shift and go to state 62
    unitary_plus                   shift and go to state 63
    unitary_minus                  shift and go to state 64
    matrix_declaration             shift and go to state 70
    expression_declaration         shift and go to state 71
    int_declaration                shift and go to state 72
    float_declaration              shift and go to state 73
    boolean_declaration            shift and go to state 74
    pointer                        shift and go to state 75
    pointer_acess                  shift and go to state 76
    puts_string                    shift and go to state 78
    puts_expressionq               shift and go to state 79
    puts_string_dq                 shift and go to state 80
    puts_expression_dq             shift and go to state 81
    and                            shift and go to state 89
    token_and                      shift and go to state 90
    token_land                     shift and go to state 91

state 2

    (1) program -> program statment .

    if              reduce using rule 1 (program -> program statment .)
    break           reduce using rule 1 (program -> program statment .)
    continue        reduce using rule 1 (program -> program statment .)
    ID              reduce using rule 1 (program -> program statment .)
    ASTERISK        reduce using rule 1 (program -> program statment .)
    LBRACKET        reduce using rule 1 (program -> program statment .)
    INDENT          reduce using rule 1 (program -> program statment .)
    for             reduce using rule 1 (program -> program statment .)
    while           reduce using rule 1 (program -> program statment .)
    do              reduce using rule 1 (program -> program statment .)
    repeat          reduce using rule 1 (program -> program statment .)
    unless          reduce using rule 1 (program -> program statment .)
    CONST_REAL      reduce using rule 1 (program -> program statment .)
    CONST_INTERGER  reduce using rule 1 (program -> program statment .)
    CONST_STRING    reduce using rule 1 (program -> program statment .)
    True            reduce using rule 1 (program -> program statment .)
    False           reduce using rule 1 (program -> program statment .)
    DSING           reduce using rule 1 (program -> program statment .)
    LAND            reduce using rule 1 (program -> program statment .)
    puts            reduce using rule 1 (program -> program statment .)
    NOT             reduce using rule 1 (program -> program statment .)
    PLUS            reduce using rule 1 (program -> program statment .)
    MINUS           reduce using rule 1 (program -> program statment .)
    int             reduce using rule 1 (program -> program statment .)
    float           reduce using rule 1 (program -> program statment .)
    boolean         reduce using rule 1 (program -> program statment .)
    AND             reduce using rule 1 (program -> program statment .)
    $end            reduce using rule 1 (program -> program statment .)
    DEDENT          reduce using rule 1 (program -> program statment .)


state 3

    (4) statment -> conditional .

    if              reduce using rule 4 (statment -> conditional .)
    break           reduce using rule 4 (statment -> conditional .)
    continue        reduce using rule 4 (statment -> conditional .)
    ID              reduce using rule 4 (statment -> conditional .)
    ASTERISK        reduce using rule 4 (statment -> conditional .)
    LBRACKET        reduce using rule 4 (statment -> conditional .)
    INDENT          reduce using rule 4 (statment -> conditional .)
    for             reduce using rule 4 (statment -> conditional .)
    while           reduce using rule 4 (statment -> conditional .)
    do              reduce using rule 4 (statment -> conditional .)
    repeat          reduce using rule 4 (statment -> conditional .)
    unless          reduce using rule 4 (statment -> conditional .)
    CONST_REAL      reduce using rule 4 (statment -> conditional .)
    CONST_INTERGER  reduce using rule 4 (statment -> conditional .)
    CONST_STRING    reduce using rule 4 (statment -> conditional .)
    True            reduce using rule 4 (statment -> conditional .)
    False           reduce using rule 4 (statment -> conditional .)
    DSING           reduce using rule 4 (statment -> conditional .)
    LAND            reduce using rule 4 (statment -> conditional .)
    puts            reduce using rule 4 (statment -> conditional .)
    NOT             reduce using rule 4 (statment -> conditional .)
    PLUS            reduce using rule 4 (statment -> conditional .)
    MINUS           reduce using rule 4 (statment -> conditional .)
    int             reduce using rule 4 (statment -> conditional .)
    float           reduce using rule 4 (statment -> conditional .)
    boolean         reduce using rule 4 (statment -> conditional .)
    AND             reduce using rule 4 (statment -> conditional .)
    $end            reduce using rule 4 (statment -> conditional .)
    DEDENT          reduce using rule 4 (statment -> conditional .)


state 4

    (5) statment -> loops .

    if              reduce using rule 5 (statment -> loops .)
    break           reduce using rule 5 (statment -> loops .)
    continue        reduce using rule 5 (statment -> loops .)
    ID              reduce using rule 5 (statment -> loops .)
    ASTERISK        reduce using rule 5 (statment -> loops .)
    LBRACKET        reduce using rule 5 (statment -> loops .)
    INDENT          reduce using rule 5 (statment -> loops .)
    for             reduce using rule 5 (statment -> loops .)
    while           reduce using rule 5 (statment -> loops .)
    do              reduce using rule 5 (statment -> loops .)
    repeat          reduce using rule 5 (statment -> loops .)
    unless          reduce using rule 5 (statment -> loops .)
    CONST_REAL      reduce using rule 5 (statment -> loops .)
    CONST_INTERGER  reduce using rule 5 (statment -> loops .)
    CONST_STRING    reduce using rule 5 (statment -> loops .)
    True            reduce using rule 5 (statment -> loops .)
    False           reduce using rule 5 (statment -> loops .)
    DSING           reduce using rule 5 (statment -> loops .)
    LAND            reduce using rule 5 (statment -> loops .)
    puts            reduce using rule 5 (statment -> loops .)
    NOT             reduce using rule 5 (statment -> loops .)
    PLUS            reduce using rule 5 (statment -> loops .)
    MINUS           reduce using rule 5 (statment -> loops .)
    int             reduce using rule 5 (statment -> loops .)
    float           reduce using rule 5 (statment -> loops .)
    boolean         reduce using rule 5 (statment -> loops .)
    AND             reduce using rule 5 (statment -> loops .)
    $end            reduce using rule 5 (statment -> loops .)
    DEDENT          reduce using rule 5 (statment -> loops .)


state 5

    (6) statment -> stop .

    if              reduce using rule 6 (statment -> stop .)
    break           reduce using rule 6 (statment -> stop .)
    continue        reduce using rule 6 (statment -> stop .)
    ID              reduce using rule 6 (statment -> stop .)
    ASTERISK        reduce using rule 6 (statment -> stop .)
    LBRACKET        reduce using rule 6 (statment -> stop .)
    INDENT          reduce using rule 6 (statment -> stop .)
    for             reduce using rule 6 (statment -> stop .)
    while           reduce using rule 6 (statment -> stop .)
    do              reduce using rule 6 (statment -> stop .)
    repeat          reduce using rule 6 (statment -> stop .)
    unless          reduce using rule 6 (statment -> stop .)
    CONST_REAL      reduce using rule 6 (statment -> stop .)
    CONST_INTERGER  reduce using rule 6 (statment -> stop .)
    CONST_STRING    reduce using rule 6 (statment -> stop .)
    True            reduce using rule 6 (statment -> stop .)
    False           reduce using rule 6 (statment -> stop .)
    DSING           reduce using rule 6 (statment -> stop .)
    LAND            reduce using rule 6 (statment -> stop .)
    puts            reduce using rule 6 (statment -> stop .)
    NOT             reduce using rule 6 (statment -> stop .)
    PLUS            reduce using rule 6 (statment -> stop .)
    MINUS           reduce using rule 6 (statment -> stop .)
    int             reduce using rule 6 (statment -> stop .)
    float           reduce using rule 6 (statment -> stop .)
    boolean         reduce using rule 6 (statment -> stop .)
    AND             reduce using rule 6 (statment -> stop .)
    $end            reduce using rule 6 (statment -> stop .)
    DEDENT          reduce using rule 6 (statment -> stop .)


state 6

    (7) statment -> conti .

    if              reduce using rule 7 (statment -> conti .)
    break           reduce using rule 7 (statment -> conti .)
    continue        reduce using rule 7 (statment -> conti .)
    ID              reduce using rule 7 (statment -> conti .)
    ASTERISK        reduce using rule 7 (statment -> conti .)
    LBRACKET        reduce using rule 7 (statment -> conti .)
    INDENT          reduce using rule 7 (statment -> conti .)
    for             reduce using rule 7 (statment -> conti .)
    while           reduce using rule 7 (statment -> conti .)
    do              reduce using rule 7 (statment -> conti .)
    repeat          reduce using rule 7 (statment -> conti .)
    unless          reduce using rule 7 (statment -> conti .)
    CONST_REAL      reduce using rule 7 (statment -> conti .)
    CONST_INTERGER  reduce using rule 7 (statment -> conti .)
    CONST_STRING    reduce using rule 7 (statment -> conti .)
    True            reduce using rule 7 (statment -> conti .)
    False           reduce using rule 7 (statment -> conti .)
    DSING           reduce using rule 7 (statment -> conti .)
    LAND            reduce using rule 7 (statment -> conti .)
    puts            reduce using rule 7 (statment -> conti .)
    NOT             reduce using rule 7 (statment -> conti .)
    PLUS            reduce using rule 7 (statment -> conti .)
    MINUS           reduce using rule 7 (statment -> conti .)
    int             reduce using rule 7 (statment -> conti .)
    float           reduce using rule 7 (statment -> conti .)
    boolean         reduce using rule 7 (statment -> conti .)
    AND             reduce using rule 7 (statment -> conti .)
    $end            reduce using rule 7 (statment -> conti .)
    DEDENT          reduce using rule 7 (statment -> conti .)


state 7

    (8) statment -> argumentlist .

    if              reduce using rule 8 (statment -> argumentlist .)
    break           reduce using rule 8 (statment -> argumentlist .)
    continue        reduce using rule 8 (statment -> argumentlist .)
    ID              reduce using rule 8 (statment -> argumentlist .)
    ASTERISK        reduce using rule 8 (statment -> argumentlist .)
    LBRACKET        reduce using rule 8 (statment -> argumentlist .)
    INDENT          reduce using rule 8 (statment -> argumentlist .)
    for             reduce using rule 8 (statment -> argumentlist .)
    while           reduce using rule 8 (statment -> argumentlist .)
    do              reduce using rule 8 (statment -> argumentlist .)
    repeat          reduce using rule 8 (statment -> argumentlist .)
    unless          reduce using rule 8 (statment -> argumentlist .)
    CONST_REAL      reduce using rule 8 (statment -> argumentlist .)
    CONST_INTERGER  reduce using rule 8 (statment -> argumentlist .)
    CONST_STRING    reduce using rule 8 (statment -> argumentlist .)
    True            reduce using rule 8 (statment -> argumentlist .)
    False           reduce using rule 8 (statment -> argumentlist .)
    DSING           reduce using rule 8 (statment -> argumentlist .)
    LAND            reduce using rule 8 (statment -> argumentlist .)
    puts            reduce using rule 8 (statment -> argumentlist .)
    NOT             reduce using rule 8 (statment -> argumentlist .)
    PLUS            reduce using rule 8 (statment -> argumentlist .)
    MINUS           reduce using rule 8 (statment -> argumentlist .)
    int             reduce using rule 8 (statment -> argumentlist .)
    float           reduce using rule 8 (statment -> argumentlist .)
    boolean         reduce using rule 8 (statment -> argumentlist .)
    AND             reduce using rule 8 (statment -> argumentlist .)
    $end            reduce using rule 8 (statment -> argumentlist .)
    DEDENT          reduce using rule 8 (statment -> argumentlist .)


state 8

    (9) statment -> bloco .

    if              reduce using rule 9 (statment -> bloco .)
    break           reduce using rule 9 (statment -> bloco .)
    continue        reduce using rule 9 (statment -> bloco .)
    ID              reduce using rule 9 (statment -> bloco .)
    ASTERISK        reduce using rule 9 (statment -> bloco .)
    LBRACKET        reduce using rule 9 (statment -> bloco .)
    INDENT          reduce using rule 9 (statment -> bloco .)
    for             reduce using rule 9 (statment -> bloco .)
    while           reduce using rule 9 (statment -> bloco .)
    do              reduce using rule 9 (statment -> bloco .)
    repeat          reduce using rule 9 (statment -> bloco .)
    unless          reduce using rule 9 (statment -> bloco .)
    CONST_REAL      reduce using rule 9 (statment -> bloco .)
    CONST_INTERGER  reduce using rule 9 (statment -> bloco .)
    CONST_STRING    reduce using rule 9 (statment -> bloco .)
    True            reduce using rule 9 (statment -> bloco .)
    False           reduce using rule 9 (statment -> bloco .)
    DSING           reduce using rule 9 (statment -> bloco .)
    LAND            reduce using rule 9 (statment -> bloco .)
    puts            reduce using rule 9 (statment -> bloco .)
    NOT             reduce using rule 9 (statment -> bloco .)
    PLUS            reduce using rule 9 (statment -> bloco .)
    MINUS           reduce using rule 9 (statment -> bloco .)
    int             reduce using rule 9 (statment -> bloco .)
    float           reduce using rule 9 (statment -> bloco .)
    boolean         reduce using rule 9 (statment -> bloco .)
    AND             reduce using rule 9 (statment -> bloco .)
    $end            reduce using rule 9 (statment -> bloco .)
    DEDENT          reduce using rule 9 (statment -> bloco .)


state 9

    (10) statment -> expression .
    (73) expression_and -> expression . AND expression
    (74) expression_or -> expression . OR expression
    (75) expression_gt -> expression . GT expression
    (76) expression_ge -> expression . GE expression
    (77) expression_lt -> expression . LT expression
    (78) expression_le -> expression . LE expression
    (88) expression_minus -> expression . MINUS expression
    (85) expression_plus -> expression . PLUS expression
    (89) expression_mult -> expression . ASTERISK expression
    (90) expression_divide -> expression . DIVIDE expression
    (91) expression_module -> expression . MODULE expression
    (86) expression_equals -> expression . EQUALS expression
    (87) expression_different -> expression . DIFFERENT expression

  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for ASTERISK resolved as shift
    if              reduce using rule 10 (statment -> expression .)
    break           reduce using rule 10 (statment -> expression .)
    continue        reduce using rule 10 (statment -> expression .)
    ID              reduce using rule 10 (statment -> expression .)
    LBRACKET        reduce using rule 10 (statment -> expression .)
    INDENT          reduce using rule 10 (statment -> expression .)
    for             reduce using rule 10 (statment -> expression .)
    while           reduce using rule 10 (statment -> expression .)
    do              reduce using rule 10 (statment -> expression .)
    repeat          reduce using rule 10 (statment -> expression .)
    unless          reduce using rule 10 (statment -> expression .)
